# cpp_17_the_complete_guide

./: .gitignore  CMakeLists.txt  README.md
filesystem/: checkpath1.cpp  checkpath2.cpp  checkpath3.cpp  createfiles.cpp  permAsString.cpp  permAsString.hpp
lang/: aggr14.cpp  alignednew11.cpp  alignednew11.hpp  alignednew17.cpp  alignednewincomp.cpp  charconv.cpp  charconv.hpp  customer1.hpp  customer2.hpp  evalexept.cpp  factory.cpp  factory.hpp  hexfloat.cpp  inlinethreadlocal.hpp  inlinethreadlocal1.cpp  inlinethreadlocal2.cpp  lambdathis.cpp  structbind1.cpp  structbind1.hpp  structbind2.cpp  structbind2.hpp  tracknew.cpp  tracknew.hpp
lib/: Circle.hpp  Coord.hpp  Line.hpp  Rectangle.hpp  Timer.hpp  accumulate.cpp  accumulate2.cpp  asint.cpp  chronoext.cpp  clamp.cpp  data.cpp  dirsize.cpp  foreachn.cpp  ic.cpp  incomplete.cpp  incomplete.hpp  last5.cpp  nodehandle.cpp  nodemerge.cpp  nodemove.cpp  optional1.cpp  optionalmember.cpp  parforeach.cpp  parforeachloop.cpp  parreduce.cpp  parreduce2.cpp  parreducefloat.cpp  partransformreduce.cpp  pmrsync0.cpp  reduce.cpp  sample1.cpp  sample2.cpp  scan.cpp  transformreduce1.cpp  transformreduce2.cpp  transformscan.cpp  variant.cpp  variantpoly1.cpp  variantpoly2.cpp  variantvisit.cpp
pmr/: pmr0.cpp  pmr1.cpp  pmr2.cpp  pmr3.cpp  pmrcustomer.hpp  pmrcustomer1.cpp  pmrnull.cpp  pmrsync1.cpp  tracker.cpp  tracker.hpp
tmpl/: addspace.cpp  addspace.hpp  classarglambda.cpp  classarglambda.hpp  decltypeauto.cpp  foldcall.cpp  foldtraverse.cpp  foldtraverse.hpp  ifcomptime.cpp  ifcomptime.hpp  ifruntime.cpp  ifruntime.hpp  invoke.cpp  invoke.hpp  ishomogeneous.cpp  overload.cpp  printauto.cpp  using2.cpp  vartmplauto.hpp  vartmplauto1.cpp  vartmplauto2.cpp
