cmake_minimum_required(VERSION 3.23)
project(cpp_17_the_complete_guide CXX)

set(CMAKE_CXX_STANDARD 17)

find_package(Threads REQUIRED)

add_executable(structbind1 lang/structbind1.cpp lang/structbind1.hpp lang/customer1.hpp)
add_executable(structbind2 lang/structbind2.cpp lang/structbind2.hpp lang/customer2.hpp)
add_executable(inlinethreadlocal1 lang/inlinethreadlocal1.cpp lang/inlinethreadlocal2.cpp lang/inlinethreadlocal.hpp)
add_executable(aggr14 lang/aggr14.cpp)
add_executable(factory lang/factory.cpp lang/factory.hpp)
add_executable(lambdathis lang/lambdathis.cpp)
add_executable(evalexept lang/evalexept.cpp)
add_executable(hexfloat lang/hexfloat.cpp)
add_executable(classarglambda tmpl/classarglambda.cpp tmpl/classarglambda.hpp)
add_executable(ifcomptime tmpl/ifcomptime.cpp tmpl/ifcomptime.hpp)
add_executable(ifruntime tmpl/ifruntime.cpp tmpl/ifruntime.hpp)
add_executable(addspace tmpl/addspace.cpp tmpl/addspace.hpp)
add_executable(foldcall tmpl/foldcall.cpp)
add_executable(foldtraverse tmpl/foldtraverse.cpp tmpl/foldtraverse.hpp)
add_executable(ishomogeneous tmpl/ishomogeneous.cpp)
add_executable(printauto tmpl/printauto.cpp)
add_executable(vartmplauto tmpl/vartmplauto1.cpp tmpl/vartmplauto2.cpp tmpl/vartmplauto.hpp)
add_executable(decltypeauto tmpl/decltypeauto.cpp)
add_executable(overload tmpl/overload.cpp)
add_executable(using2 tmpl/using2.cpp)

target_link_libraries(inlinethreadlocal1 ${CMAKE_THREAD_LIBS_INIT})

