cmake_minimum_required(VERSION 3.23)
project(cpp_17_the_complete_guide CXX)

set(CMAKE_CXX_STANDARD 17)

find_package(Threads REQUIRED)

add_executable(structbind1 lang/structbind1.cpp lang/structbind1.hpp lang/customer1.hpp)
add_executable(structbind2 lang/structbind2.cpp lang/structbind2.hpp lang/customer2.hpp)
add_executable(inlinethreadlocal1 lang/inlinethreadlocal1.cpp lang/inlinethreadlocal2.cpp lang/inlinethreadlocal.hpp)
add_executable(aggr14 lang/aggr14.cpp)
add_executable(factory lang/factory.cpp lang/factory.hpp)
add_executable(lambdathis lang/lambdathis.cpp)
add_executable(evalexept lang/evalexept.cpp)
add_executable(hexfloat lang/hexfloat.cpp)
add_executable(classarglambda tmpl/classarglambda.cpp tmpl/classarglambda.hpp)
add_executable(ifcomptime tmpl/ifcomptime.cpp tmpl/ifcomptime.hpp)
add_executable(ifruntime tmpl/ifruntime.cpp tmpl/ifruntime.hpp)
add_executable(addspace tmpl/addspace.cpp tmpl/addspace.hpp)
add_executable(foldcall tmpl/foldcall.cpp)
add_executable(foldtraverse tmpl/foldtraverse.cpp tmpl/foldtraverse.hpp)
add_executable(ishomogeneous tmpl/ishomogeneous.cpp)
add_executable(printauto tmpl/printauto.cpp)
add_executable(vartmplauto tmpl/vartmplauto1.cpp tmpl/vartmplauto2.cpp tmpl/vartmplauto.hpp)
add_executable(decltypeauto tmpl/decltypeauto.cpp)
add_executable(overload tmpl/overload.cpp)
add_executable(using2 tmpl/using2.cpp)
add_executable(optional1 lib/optional1.cpp)
add_executable(optionalmember lib/optionalmember.cpp)
add_executable(variant lib/variant.cpp)
add_executable(variantvisit lib/variantvisit.cpp)
add_executable(variantpoly1 lib/variantpoly1.cpp)
add_executable(variantpoly2 lib/variantpoly2.cpp)
add_executable(asint lib/asint.cpp lib/Timer.hpp)
add_executable(checkpath1 filesystem/checkpath1.cpp)
add_executable(checkpath2 filesystem/checkpath2.cpp)
add_executable(checkpath3 filesystem/checkpath3.cpp)
add_executable(createfiles filesystem/createfiles.cpp)
add_executable(permAsString filesystem/permAsString.cpp)
add_executable(parforeach lib/parforeach.cpp)
add_executable(parforeachloop lib/parforeachloop.cpp)
add_executable(accumulate lib/accumulate.cpp)
add_executable(parreduce lib/parreduce.cpp)
add_executable(parreducefloat lib/parreducefloat.cpp)
add_executable(accumulate2 lib/accumulate2.cpp)
add_executable(parreduce2 lib/parreduce2.cpp)
add_executable(partransformreduce lib/partransformreduce.cpp)
add_executable(dirsize lib/dirsize.cpp)
add_executable(foreachn lib/foreachn.cpp)
add_executable(reduce lib/reduce.cpp)
add_executable(transformreduce1 lib/transformreduce1.cpp)
add_executable(transformreduce2 lib/transformreduce2.cpp)
add_executable(scan lib/scan.cpp)

target_link_libraries(inlinethreadlocal1 ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(parforeach tbb)
target_link_libraries(parforeachloop tbb)
target_link_libraries(parreduce tbb)
target_link_libraries(parreducefloat tbb)
target_link_libraries(parreduce2 tbb)
target_link_libraries(partransformreduce tbb)
target_link_libraries(dirsize tbb)
target_link_libraries(foreachn tbb)
target_link_libraries(reduce tbb)
target_link_libraries(transformreduce1 tbb)
target_link_libraries(transformreduce2 tbb)